test: removing some code smell from sonarLint