@@ -3,7 +3,6 @@ package com.mobi7.positionapi.exceptions;
 import org.springframework.validation.BindingResult;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ApiErrors {
 
@@ -12,7 +11,7 @@ public class ApiErrors {
     public ApiErrors(BindingResult bindingResult) {
         this.errors = bindingResult.getAllErrors().stream()
                 .map(error -> error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> getErrors() {
